# actix_web-server

./: Cargo.toml  diesel.toml
migrations/2024-11-17-220128_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
