[package]
name = "actix-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"
